--- a/example.conf
+++ b/example.conf
@@ -11,19 +11,27 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    auth_ldap_url ldap://ldap.example.com/dc=example,dc=com?uid?sub?(objectClass=person);
-    auth_ldap_binddn cn=nginx,ou=service,dc=example,dc=com;
-    auth_ldap_binddn_passwd mYsUperPas55W0Rd;
+    ldap_server test1 {
+      url ldap://ldap.example.com/dc=example,dc=com?uid?sub?(objectClass=person);
+      binddn "cn=nginx,ou=service,dc=example,dc=com";
+      binddn_passwd mYsUperPas55W0Rd;
+      group_attribute uniquemember; # default 'member'
+      group_attribute_is_dn on; # default on
+    }
 
-    auth_ldap_group_attribute uniquemember; # default 'member'
-    auth_ldap_group_attribute_is_dn on; # default on
 
     server {
         listen       8081;
         server_name  localhost;
 
         location / {
+            root   html;
+            index  index.html index.htm;
+        }
+
+        location / {
             auth_ldap "Closed content";
+            auth_ldap_servers test1;
         
             #auth_ldap_require valid_user;
             auth_ldap_require user 'cn=Super User,ou=user,dc=example,dc=com';
