--- a/example.conf
+++ b/example.conf
@@ -29,6 +29,7 @@ http {
             auth_ldap_servers test1;
         
             #auth_ldap_require valid_user;
+            #auth_ldap_require user 'super';
             auth_ldap_require user 'cn=Super User,ou=user,dc=example,dc=com';
             auth_ldap_require group 'cn=admins,ou=group,dc=example,dc=com';
             auth_ldap_require group 'cn=user,ou=group,dc=example,dc=com';
